# computational-finance

./: .dockerignore  .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/config/: schema.py  settings.py  urls.py
backend/mailer/: admin.py  mail_backends.py  models.py  output.py  source.txt  tree.txt  utils.py
backend/mailer/migrations/: 0001_initial.py
backend/stocks/: admin.py  analytics.py  models.py  portfolio_analytics.py  types.py
backend/stocks/migrations/: 0001_initial.py  0002_alter_analysisresult_id_alter_financialstatement_id_and_more.py  0002_financialstatement_analysisresult_and_more.py  0002_stock_japanese_market_stock_japanese_name_and_more.py  0003_analysisresult_implied_revenue_growth.py  0004_analysisresult_actual_revenue_growth_and_more.py  0005_analysisresult_expectation_structure_and_more.py  0006_analysisresult_tag_accounting_risk_and_more.py  0007_portfolio_portfolioitem.py  (+7 more)
backend/users/: extensions.py  models.py  schema.py  types.py  utils.py
docs/: analysis_update_and_the_advice.md  businessplan.md  criteria_for_users.md  explain_functions.md  next_step2026-mar-15.md  reverse_dcf_problem.md  steps.md
frontend/: Dockerfile  codegen.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: AddToPortfolioModal.tsx  AnalysisDashboard.tsx  MarketScatterPlot.tsx  StockCard.tsx  StockCardMarket.tsx  StockFinancialChart.tsx  TradingViewWidget.tsx
frontend/lib/: apollo-provider.tsx  graphql.ts  narrativeGenerator.ts
(+21 files in other folders)
