[project]
name = "computational-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django<6.0",
    "django-cors-headers>=4.9.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "strawberry-graphql-django>=0.72.0",
    "yfinance>=1.0",
]
