[project]
name = "computational-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django<6.0",
    "django-cors-headers>=4.9.0",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "strawberry-graphql-django>=0.72.0",
    "tqdm>=4.67.1",
    "uuid6>=2025.0.1",
    "xlrd>=2.0.2",
    "yfinance>=1.1",
]
